--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <p>#StayMotivated</p>
         </div>
         <div class="creator">
-          <p>Designed by: <a href="www.patrykjary.com" target="_blank"> Patryk Jary</a></p>
+          <p>Designed by: <a href="http://patrykjary.com/" target="_blank"> Patryk Jary</a></p>
         </div>
       </div>
     </footer>
